--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "./bin/faros_event_helper.sh RUN_STEP_START --step BUILD && tsc -p src; ./bin/faros_event_helper.sh RUN_STEP_END --step BUILD",
-    "test": "./bin/faros_event_helper.sh RUN_STEP_START --step TEST && jest --verbose --color; ./bin/faros_event_helper.sh RUN_STEP_END --step TEST",
+    "build": "export STEP_ID=\"$(jq -nr 'now | todate')\"; ./bin/faros_event_helper.sh RUN_STEP_START --step BUILD --step-id $STEP_ID && tsc -p src; EXIT_CODE=$? ./bin/faros_event_helper.sh RUN_STEP_END --step BUILD --step-id $STEP_ID",
+    "test": "export STEP_ID=\"$(jq -nr 'now | todate')\"; ./bin/faros_event_helper.sh RUN_STEP_START --step TEST --step-id $STEP_ID && jest --verbose --color; EXIT_CODE=$? ./bin/faros_event_helper.sh RUN_STEP_END --step TEST --step-id $STEP_ID",
     "clean": "rm -rf lib node_modules out",
     "preinstall": "./bin/faros_event_helper.sh RUN_STEP_START --step PREINSTALL",
     "postinstall": "./bin/faros_event_helper.sh RUN_STEP_SUCCESS --step POSTINSTALL"
