--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "export STEP_ID=\"$(jq -nr 'now | todate')\"; ./bin/faros_event_helper.sh RUN_STEP_START --step TEST --step-id $STEP_ID && jest --verbose --color; EXIT_CODE=$? ./bin/faros_event_helper.sh RUN_STEP_END --step TEST --step-id $STEP_ID",
     "clean": "rm -rf lib node_modules out",
     "preinstall": "./bin/faros_event_helper.sh RUN_STEP_START --step PREINSTALL",
-    "postinstall": "./bin/faros_event_helper.sh RUN_STEP_SUCCESS --step POSTINSTALL"
+    "postinstall": "EXIT_CODE=1; ./bin/faros_event_helper.sh RUN_STEP_END --step POSTINSTALL"
   },
   "repository": {
     "type": "git",
