--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "export STEP_ID=\"$(jq -nr 'now | todate')\"; ./bin/faros_event_helper.sh RUN_STEP_START --step BUILD --step-id $STEP_ID && tsc -p src; EXIT_CODE=$? ./bin/faros_event_helper.sh RUN_STEP_END --step BUILD --step-id $STEP_ID",
     "test": "export STEP_ID=\"$(jq -nr 'now | todate')\"; ./bin/faros_event_helper.sh RUN_STEP_START --step TEST --step-id $STEP_ID && jest --verbose --color; EXIT_CODE=$? ./bin/faros_event_helper.sh RUN_STEP_END --step TEST --step-id $STEP_ID",
     "clean": "rm -rf lib node_modules out",
-    "preinstall": "./bin/faros_event_helper.sh RUN_STEP_START --step PREINSTALL",
-    "postinstall": "EXIT_CODE=0; ./bin/faros_event_helper.sh RUN_STEP_END --step POSTINSTALL"
+    "preinstall": "EXIT_CODE=0; ./bin/faros_event_helper.sh RUN_STEP --step PREINSTALL",
+    "postinstall": "EXIT_CODE=0; ./bin/faros_event_helper.sh RUN_STEP --step POSTINSTALL"
   },
   "repository": {
     "type": "git",
