--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": false,
-    "target": "es2019"
+    "target": "es2019",
+    "rootDir": "./src",
+    "outDir": "./lib"
   }
 }
