--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/faros-ai/lighthouse.git"
+    "url": "git+https://github.com/faros-ai/dev-cycle-insrumentation-demo.git"
   },
   "keywords": [],
   "author": "“Will Marks” <“will@faros.ai”>",
